--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ minecraft {
 repositories {
     maven { url 'https://maven.enginehub.org/repo/' }
     maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
+	maven { url "https://cfa2.cursemaven.com" }
     jcenter()
     mavenCentral()
 }
