--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ repositories {
 	maven { url "https://jitpack.io" }
     maven { url "https://maven.cloudsmith.io/geckolib3/geckolib/" }
     maven { url "https://maven.theillusivec4.top/" }
+    maven { url "https://plugins.gradle.org/m2/" }
     mavenCentral()
 }
 
