--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.18.2
+minecraft_version=22w11a
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=1.18.2+build.1
+yarn_mappings=22w11a+build.2
 loader_version=0.13.3
-fabric_version=0.47.8+1.18.2
+fabric_version=0.49.2+1.19
 
 # Mod Properties
 mod_version=3.0.35
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-1.18
+archives_base_name=geckolib-fabric-22w11a
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
