AT > OBfuscationHelper > Reflect

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,11 @@ configurations {
 
 minecraft {
     mappings channel:"official", version:"1.16.5"
+    
+    accessTransformer = file(
+        'src/main/resources/META-INF/accesstransformer.cfg'
+    )
+    
     runs {
         client {
             workingDirectory project.file('runs/' + name)
