build gradle clean up, no release needed

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,11 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+minecraft_version=1.16.5
 mod_version=3.0.71
 archives_base_name=geckolib-forge-1.16.5
 geckolib_core_version=1.0.5
+maven_group=software.bernie.geckolib
 
 #Publishing
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
