--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=3.0.18
+minecraft_version=1.16.5
 # Basically forge automatically filters out jars with forge- in it as it assumes that's a forge jar, so its removed
 archives_base_name=geckolib-1.18-forge
 geckolib_core_version=1.0.5
+maven_group=software.bernie.geckolib
