--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=false
 mod_version=3.0.24
 archives_base_name=forge-1.12.2-geckolib
 geckolib_core_version=1.0.4
+maven_group=software.bernie.geckolib
 
 #Publishing
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
