WIP of Ders PR Ported to 1.18

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
+public net.minecraft.client.renderer.blockentity.SkullBlockRenderer f_173658_ # modelByType
