--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=22w19a
+minecraft_version=1.19-rc2
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=22w19a+build.1
-loader_version=0.14.5
-fabric_version=0.52.2+1.19
+yarn_mappings=1.19-rc2+build.1
+loader_version=0.14.6
+fabric_version=0.55.0+1.19
 
 # Mod Properties
-mod_version=3.0.0
+mod_version=3.1.0
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-22w19a
+archives_base_name=geckolib-fabric-1.19-pre3
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
