--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
     	maven { url  = 'https://plugins.gradle.org/m2/' }
+        maven { url = 'https://maven.parchmentmc.org' }
     }
     dependencies {
         classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.0"
@@ -42,6 +43,10 @@ dependencies {
     // Minecraft/Fabric deps
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	// mappings loom.layered() {
+		// officialMojangMappings()
+		// parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:2022.05.22@zip")
+	// }
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
