Change file name for new builds after this.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_version=3.0.26
-archives_base_name=forge-1.12.2-geckolib
+archives_base_name=geckolib-forge-1.12.2
 geckolib_core_version=1.0.4
 maven_group=software.bernie.geckolib
 
