--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ fabric_version=0.55.0+1.19
 # Mod Properties
 mod_version=3.1.0
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-1.19-pre3
+archives_base_name=geckolib-fabric-1.19-rc2
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
