--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,6 @@ org.gradle.daemon=false
 mod_version=3.1.0
 minecraft_version=1.18.2
 # Basically forge automatically filters out jars with forge- in it as it assumes that's a forge jar, so its removed
-archives_base_name=geckolib-1.19-forge
+archives_base_name=geckolib-forge-1.19
 geckolib_core_version=1.0.5
 maven_group=software.bernie.geckolib
