--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.19-rc2
+minecraft_version=1.19
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=1.19-rc2+build.1
+yarn_mappings=1.19+build.1
 loader_version=0.14.6
 fabric_version=0.55.1+1.19
 
 # Mod Properties
 mod_version=3.1.0
 maven_group=software.bernie.geckolib
-archives_base_name=geckolib-fabric-1.19-rc2
+archives_base_name=geckolib-fabric-1.19
 repsyUrl=https://repo.repsy.io/mvn/gandiber/geckolib
