--- a/build.gradle
+++ b/build.gradle
@@ -193,7 +193,7 @@ if (file('key.properties').exists()) {
         releaseType = "release"
         changelogType = 'text'
         changelog = file('changelog.txt')
-        addGameVersion("1.19-Snapshot")
+        addGameVersion("1.19")
         addGameVersion("Fabric")
         addGameVersion("Java 17")
 
