--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ configurations {
 }
 
 minecraft {
-    //mappings channel: 'official', version: '1.18.2'
-	mappings channel: 'parchment', version: '2022.05.22-1.18.2'
+    mappings channel: 'official', version: '1.19'
+	//mappings channel: 'parchment', version: '2022.05.22-1.18.2'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
@@ -125,7 +125,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.2-40.0.19'
+    minecraft 'net.minecraftforge:forge:1.19-41.0.1'
     library 'com.eliotlash.molang:molang:18'
     library 'com.eliotlash.mclib:mclib:18'
     library(project(':geckolib-core')) {
