--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=3.0.23
+mod_version=3.0.24
 minecraft_version=1.18.2
 # Basically forge automatically filters out jars with forge- in it as it assumes that's a forge jar, so its removed
-archives_base_name=geckolib-1.18-forge
+archives_base_name=geckolib-forge-1.18
 geckolib_core_version=1.0.5
 maven_group=software.bernie.geckolib
