--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,7 @@
 public net.minecraft.client.renderer.model.ModelRenderer field_78154_a
 public net.minecraft.client.renderer.model.ModelRenderer field_78804_l
 public net.minecraft.client.renderer.model.ModelRenderer field_228286_w_
+
+public net.minecraft.util.math.vector.Matrix4f field_226578_d_ # m03
+public net.minecraft.util.math.vector.Matrix4f field_226582_h_ # m13
+public net.minecraft.util.math.vector.Matrix4f field_226586_l_ # m23
