--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,7 @@
 public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
 public net.minecraft.client.renderer.blockentity.SkullBlockRenderer f_173658_ # modelByType
+
+public com.mojang.math.Matrix4f f_27606_ # m03
+public com.mojang.math.Matrix4f f_27610_ # m13
+public com.mojang.math.Matrix4f f_27614_ # m23
