--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ configurations {
 }
 
 minecraft {
-    mappings channel: 'official', version: '1.19'
-	//mappings channel: 'parchment', version: '2022.05.22-1.18.2'
+    //mappings channel: 'official', version: '1.19'
+    mappings channel: 'parchment', version: '2022.07.17-1.18.2'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
