--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
         useJUnitPlatform()
     }
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+	modImplementation "curse.maven:Patchouli-393236:3846085"
 }
 
 shadowJar {
