--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ configurations {
 }
 
 minecraft {
-    mappings channel: 'official', version: '1.19'
+    mappings channel: 'official', version: '1.19.2'
     //mappings channel: 'parchment', version: '2022.07.17-1.18.2'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
@@ -125,7 +125,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19-41.1.0'
+    minecraft 'net.minecraftforge:forge:1.19.2-43.0.0'
     library 'com.eliotlash.molang:molang:18'
     library 'com.eliotlash.mclib:mclib:18'
     library(project(':geckolib-core')) {
@@ -267,6 +267,7 @@ if (file('key.properties').exists()) {
             changelog = file('changelog.txt')
         	addGameVersion("1.19")
         	addGameVersion("1.19.1")
+        	addGameVersion("1.19.2")
             addGameVersion("Forge")
             addGameVersion("Java 17")
         }
