--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,12 @@ plugins {
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.1.0'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 import groovy.json.JsonSlurper
 import groovy.json.JsonOutput
+import com.modrinth.minotaur.dependencies.ModDependency
 
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
@@ -33,6 +35,8 @@ repositories {
     maven { url "https://maven.cloudsmith.io/geckolib3/geckolib/" }
     maven { url "https://plugins.gradle.org/m2/" }
     maven { url "https://maven.shedaniel.me/" }
+	maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
+	maven { url = "https://maven.terraformersmc.com/" }
 }
 
 configurations {
@@ -213,4 +217,24 @@ if (file('key.properties').exists()) {
         forgeGradleIntegration = false
     }
    }
+}
+
+if (file('key.properties').exists()) {
+	modrinth {
+		def modrinthProp = new Properties()
+		File secretPropsFile = file("key.properties")
+		modrinthProp.load(secretPropsFile.newInputStream())
+		
+		token = modrinthProp.getProperty('modrinthKey')
+		projectId = '8BmcQJ2H' 
+		versionNumber = project.mod_version 
+		versionName = 'Fabric 1.19'
+		uploadFile = jar 
+		changelog = rootProject.file("changelog.txt").text
+		gameVersions = ['1.19.1', '1.19.2']
+		loaders = ['fabric']
+		dependencies { 
+        	required.project "fabric-api"
+   		}
+	}
 }
