--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,6 @@ pluginManagement {
         mavenCentral()
     }
 }
-rootProject.name = 'geckolib'
+rootProject.name = 'geckolib-fabric-1.19'
 include ':geckolib-core'
 project(':geckolib-core').projectDir = new File('./core')
