--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 plugins {
-    id 'fabric-loom' version '0.11-SNAPSHOT'
+    id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.1.0'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
@@ -221,7 +221,7 @@ if (file('key.properties').exists()) {
 		projectId = '8BmcQJ2H' 
 		versionNumber = project.mod_version 
 		versionName = 'Fabric 1.18.2'
-		uploadFile = jar 
+		uploadFile = remapJar 
 		changelog = rootProject.file("changelog.txt").text
 		gameVersions = ['1.18.2']
 		loaders = ['fabric']
